cabal-version:      2.4
name:               hpong
version:            0.1.0.0
homepage:           https://github.com/mchaver/hpong#readme
license:            BSD-3-Clause
license-file:       LICENSE
author:             James M.C. Haver II
maintainer:         mchaver@gmail.com
copyright:          PRIVATE
category:           Web
build-type:         Simple
tested-with:        GHC ==8.6.5 || ==8.8.2
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/mchaver/hpong

executable hpong
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
    , base       >=4.12 && <4.14
    , FTGL       ^>=2.1
    , GLFW-b     ^>=3.3
    , GLURaw     ^>=2.0
    , OpenGLRaw  ^>=3.3
    , text

  default-language: Haskell2010
